--- a/yeshoupai/yeshoupai.html
+++ b/yeshoupai/yeshoupai.html
@@ -8,83 +8,148 @@
 </head>
 <body>
     <div class="header">
-        <div class="header-left"></div>
-        <div class="header-center"></div>
-        <div class="header-right"></div>
+        <div class="header-left">
+            <span>欢迎来到THE BEAST野兽派!</span>
+            <span>登录</span>
+            <span>注册</span>
+        </div>
+        <div class="header-center">
+            <img src="./img/bst-new-logo.png" alt="logo" />
+        </div>
+        <div class="header-right">
+            <div class="input-border">
+                <button>Search</button>
+                <input type="text" placeholder="新品上架" />
+            </div>
+        </div>
     </div>
     <div class="nav-wrapper">
         <ul class="nav">
             <li class="nav-item">
                 <h3>what's new</h3>
                 <h4>新鲜上架</h4>
+                <div class="m-line show-mask-child-hide"></div>
             </li>
             <li class="nav-item">
                 <h3>Flora</h3>
                 <h4>花艺</h4>
+                <div class="m-line show-mask-child-hide"></div>
             </li>
             <li class="nav-item">
                 <h3>Home Textile</h3>
                 <h4>家纺</h4>
+                <div class="m-line show-mask-child-hide"></div>
             </li>
             <li class="nav-item">
                 <h3>Fumiture</h3>
                 <h4>家具</h4>
+                <div class="m-line show-mask-child-hide"></div>
             </li>
             <li class="nav-item">
                 <h3>Decor & Tabletop</h3>
                 <h4>家饰餐厨</h4>
+                <div class="m-line show-mask-child-hide"></div>
             </li>
             <li class="nav-item">
                 <h3>Beauty</h3>
                 <h4>美妆个护</h4>
+                <div class="m-line show-mask-child-hide"></div>
             </li>
             <li class="nav-item">
                 <h3>Fragance</h3>
                 <h4>香氛</h4>
+                <div class="m-line show-mask-child-hide"></div>
             </li>
             <li class="nav-item">
                 <h3>Jewelry & Accessories</h3>
                 <h4>珠宝配饰</h4>
+                <div class="m-line show-mask-child-hide"></div>
             </li>
             <li class="nav-item">
                 <h3>Lingerie</h3>
                 <h4>家居服</h4>
+                <div class="m-line show-mask-child-hide"></div>
             </li>
             <li class="nav-item">
                 <h3>Beast Town</h3>
                 <h4>海外直邮</h4>
+                <div class="m-line show-mask-child-hide"></div>
             </li>
             <li class="nav-item">
                 <h3>Gifts</h3>
                 <h4>礼物</h4>
+                <div class="m-line show-mask-child-hide"></div>
             </li>
             <li class="nav-item">
                 <h3>Sale</h3>
                 <h4>折扣</h4>
+                <div class="m-line show-mask-child-hide"></div>
             </li>
             <li class="nav-item">
                 <h3>Stores</h3>
                 <h4>实体店</h4>
+                <div class="m-line show-mask-child-hide"></div>
             </li>
         </ul>
     </div>
     <div class="content">
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
+        <div class="grid-item"><img src="./img/1.jpg" alt="" /><div class="show-mask-child show-mask-child-hide"></div></div>
+        <div class="grid-item"><img src="./img/2.jpg" alt="" /><div class="show-mask-child show-mask-child-hide"></div></div>
+        <div class="grid-item"><img src="./img/3.jpg" alt="" /><div class="show-mask-child show-mask-child-hide"></div></div>
+        <div class="grid-item"><img src="./img/4.jpg" alt="" /><div class="show-mask-child show-mask-child-hide"></div></div>
+        <div class="grid-item"><img src="./img/6.jpg" alt="" /><div class="show-mask-child show-mask-child-hide"></div></div>
+        <div class="grid-item"><img src="./img/5.jpg" alt="" /><div class="show-mask-child show-mask-child-hide"></div></div>
+        <div class="grid-item"><img src="./img/7.jpg" alt="" /><div class="show-mask-child show-mask-child-hide"></div></div>
+        <div class="grid-item"><img src="./img/8.jpg" alt="" /><div class="show-mask-child show-mask-child-hide"></div></div>
+        <div class="grid-item"><img src="./img/9.jpg" alt="" /><div class="show-mask-child show-mask-child-hide"></div></div>
+        <div class="grid-item"><img src="./img/10.jpg" alt="" /><div class="show-mask-child show-mask-child-hide"></div></div>
     </div>
-    <hr />
+    <img src="./img/t2.jpg" class="hr-img" />
     <div class="store">
-        <div class="store-item"></div>
-        <div class="store-item"></div>
-        <div class="store-item"></div>
+        <div class="store-item"><img src="./img/11.png" alt="" /></div>
+        <div class="store-item"><img src="./img/12.jpg" alt="" /></div>
+        <div class="store-item"><img src="./img/13.jpg" alt="" /></div>
     </div>
+    <div class="block-hr"></div>
+    <div class="footer-nav">
+        <div class="list">
+            <dl>
+                <dt>野兽VIP</dt>
+                <dd>野兽派会员中心</dd>
+                <dd>常见问题(新)</dd>
+                <dd>集团采购</dd>
+            </dl>
+            <dl>
+                <dt>配送方式</dt>
+                <dd>配送时间</dd>
+                <dd>配送范围</dd>
+                <dd>配送收费标准</dd>
+                <dd>快递查询</dd>
+            </dl>
+            <dl>
+                <dt>支付方式</dt>
+                <dd>支付宝/微信支付</dd>
+                <dd>实体店支付</dd>
+                <dd>优惠券使用</dd>
+                <dd>礼品卡支付</dd>
+            </dl>
+            <dl>
+                <dt>售后服务</dt>
+                <dd>退货流程以及退款</dd>
+                <dd>订单修改及发票</dd>
+                <dd>客服联系方式</dd>
+                <dd>跨境购说明</dd>
+            </dl>
+            <div>
+                <h5>微信商店在线客服</h5>
+                <img src="img/82256.jpg" alt="" />
+            </div>
+            <div>
+                <h5>订阅号</h5>
+                <img src="img/82287.jpg" alt="" /> 
+            </div>
+        </div>
+    </div>
+<script src="./yeshoupai.js"></script>
 </body>
 </html>
